Добавил: axios, mobx, store для:   сущностей,   пагинации, пагинацию (в консоли срач из-за нее, надо поправить)

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.8",
     "mobx": "^6.12.3",
+    "mobx-react": "^9.1.1",
     "mobx-react-lite": "^4.0.7",
     "mobx-utils": "^6.0.8",
     "react": "^18.2.0",
